admin/caramel.css
/* ... */
@font-face {
  font-family: "Open Sans";
  src: url("../fonts/opensans_bold/OpenSans-Bold-webfont.eot");
  src: url("../fonts/opensans_bold/OpenSans-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans_bold/OpenSans-Bold-webfont.woff") format("woff"), url("../fonts/opensans_bold/OpenSans-Bold-webfont.ttf") format("truetype"), url("../fonts/opensans_bold/OpenSans-Bold-webfont.svg#open_sansbold") format("svg");
  font-weight: 600;
  font-weight: bold;
  font-style: normal; }
@font-face {
  font-family: "Open Sans";
  src: url("../fonts/opensans_italic/OpenSans-Italic-webfont.eot");
  src: url("../fonts/opensans_italic/OpenSans-Italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/opensans_italic/OpenSans-Italic-webfont.woff") format("woff"), url("../fonts/opensans_italic/OpenSans-Italic-webfont.ttf") format("truetype"), url("../fonts/opensans_italic/OpenSans-Italic-webfont.svg#open_sansitalic") format("svg");
  font-weight: 400;
  font-weight: normal;
  font-style: italic; }
*/
/* OLD
$default:   #5F5F5F;
$success:   #5CB85C;
$error:     #D9534F;
$warn:      #F0AD4E;
$info:      #52B7D6;
$dark:      #525252;
$light:     #FAFAFA;
*/
body {
/*  font-family: "Open Sans", sans-serif;*/
  font-size: 14px;
  font-weight: 400;
  line-height: 1.4;
  background-color: #FFF;
  color: #5F5F5F;
  margin: 0; }

body.dark {
  background-color: #525252;
  color: #FAFAFA; }

.container, main {
  width: inherit;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 35px; }

@media (max-width: 800px) {
  .container, main {
    padding: 0 10px; } }
.footer, footer {
  margin: 15px 0;
  padding: 5px 0; }

.hidden {
  display: none; }

.left {
  float: left; }

.right {
  float: right; }

hr {
  margin: 20px 0;
  border: 0;
  border-top: 1px solid #ededed; }

table {
  border-spacing: 0;
  border-collapse: collapse; }
  table td, table th {
    padding: 0; }

.dismiss {
  float: right;
  position: relative;
  right: 0;
  cursor: pointer; }

.center {
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  position: absolute;
  text-align: center;
  top: 50%;
  left: 50%;
  min-width: 600px; }

@media (max-width: 800px) {
  .center {
    -webkit-transform: none;
    -moz-transform: none;
    transform: none;
    position: inherit;
    top: inherit;
    left: inherit; } }
.center--noquery {
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  position: absolute;
  text-align: center;
  top: 50%;
  left: 50%;
  min-width: 600px; }

.alert {
  display: block;
  vertical-align: middle;
  padding: 20px;
  margin-bottom: 10px;
  color: #5F5F5F;
  border: 1px solid #ededed;
  background: #FAFAFA;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px; }

.alert.success {
  color: #FFF;
  border: 1px solid #4cae4c;
  background: #5CB85C; }

.alert.error {
  color: #FFF;
  border: 1px solid #d83532;
  background: #DC4A47; }

.alert.warn {
  color: #FFF;
  border: 1px solid #ee931c;
  background: #F09E34; }

.alert.info {
  color: #FFF;
  border: 1px solid #3daed1;
  background: #52B7D6; }

.alert.dark {
  color: #FFF;
  border: 1px solid #454545;
  background: #525252; }

.btn {
  font: inherit;
  padding: 6px 14px;
  margin-bottom: 5px;
  vertical-align: middle;
  color: #5F5F5F;
  line-height: 1.42;
  text-align: center;
  border: 1px solid #ededed;
  background: #FAFAFA;
  cursor: pointer;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px;
  display: -moz-inline-stack;
  display: inline-block;
  *zoom: 1;
  *display: inline; }
  .btn:hover, .btn:active {
    color: #5F5F5F;
    border: 1px solid #ededed;
    background: #ededed; }

.btn.sml {
  padding: 4px 10px 3px;
  font-size: 10px; }

.dropdown {
  cursor: pointer; }

.btn.success {
  color: #FFF;
  border: 1px solid #4cae4c;
  background: #5CB85C; }
  .btn.success:hover, .btn.success:active {
    border: 1px solid #4cae4c;
    background: #63bb63; }

.btn.error {
  color: #FFF;
  border: 1px solid #d83532;
  background: #DC4A47; }
  .btn.error:hover, .btn.error:active {
    border: 1px solid #d83532;
    background: #de5250; }

.btn.warn {
  color: #FFF;
  border: 1px solid #ee931c;
  background: #F09E34; }
  .btn.warn:hover, .btn.warn:active {
    border: 1px solid #ee931c;
    background: #f1a33d; }

.btn.info {
  color: #FFF;
  border: 1px solid #3daed1;
  background: #52B7D6; }
  .btn.info:hover, .btn.info:active {
    border: 1px solid #3daed1;
    background: #5abad8; }

.btn.dark {
  color: #FFF;
  border: 1px solid #454545;
  background: #525252; }
  .btn.dark:hover, .btn.dark:active {
    border: 1px solid #454545;
    background: #575757; }

input {
  font: inherit; }

input[type=text],
input[type=date],
input[type=email],
input[type=number],
input[type=password],
input[type=search],
input[type=tel],
input[type=time],
input[type=url],
input[type=week],
textarea {
  min-width: 100px;
  margin: 0 5px 5px 0;
  padding: 10px 15px;
  font: inherit;
  color: inherit;
  line-height: 1.42;
  vertical-align: middle;
  border: 1px solid #ededed;
  background: #FFF;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px;
  display: -moz-inline-stack;
  display: inline-block;
  *zoom: 1;
  *display: inline; }

input[type=submit] {
  border: none; }

textarea {
  min-height: 20px; }

input.success {
  border: 1px solid #5CB85C; }

input.error {
  border: 1px solid #DC4A47; }

input.warn {
  border: 1px solid #F09E34; }

input.info {
  border: 1px solid #52B7D6; }

input.dark {
  border: 1px solid #525252; }

/*  Grid contributed to Caramel by github.com/gratimax */
.row:before, .row:after {
  content: " ";
  display: table; }
.row:after {
  clear: both; }

.box {
  float: left;
  margin-left: 1.25%;
  margin-right: 1.25%; }
/* ... */

